--- a/main/templates/main/searchresults.html
+++ b/main/templates/main/searchresults.html
@@ -25,13 +25,14 @@
                 <div class="col-lg-2 mb-3">
                     <div class="container  bg-white shadow-lg rounded-4 py-3">
                         <div class="visually-hidden-focusable">
-                            <select class="form-control me-1 ms-2 mb-1 d-flex justify-content-center" type="search" id="Search" name="Search"  aria-label="Search">
+                            <select class="form-control me-1 ms-2 mb-1 d-flex justify-content-center" type="search"
+                                    id="Search" name="Search"  aria-label="Search">
                                 <option selected value={{ search }}>{{ search }}</option>
                             </select>
                         </div>
                         <div class="mb-2 mt-2 ms-2"> Тип оборудования</div>
                         <select class="form-select mb-2" id='Type' aria-label="Type" name="Type"
-                                onchange="this.form.submit()">
+                               >
                             {% if  type_filter  %}
                             <option selected value={{ type_filter }}>{{ type_filter }}</option>
                             {% endif %}
@@ -43,7 +44,7 @@
                         </select>
                         <div class="mb-2 mt-2 ms-2"> Производитель</div>
                         <select class="form-select mb-2" id='Company' aria-label="Company" name="Company"
-                                onchange="this.form.submit()">
+                                >
                             {% if company  %}
                             <option selected value={{ company }}>{{ company }}</option>
                             {% endif %}
@@ -53,11 +54,25 @@
                                 <option value={{ brand.grouper }}>{{ brand.grouper }}</option>
                             {% endfor %}
                         </select>
+
+                        <div class="mb-2 mt-2 ms-2"> Срочно реализовать? </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="+" id="defaultCheck1" name="Expired">
+                          <label class="form-check-label" for="defaultCheck1">
+                            Да
+                          </label>
+                        </div>
 {#                        <div class="p-lg-2">#}
 {#                            <button type="reset" style='width: 100%; padding-left:0; padding-right:0;'#}
 {#                                    class="btn btn-secondary">Применить#}
 {#                            </button>#}
 {#                        </div>#}
+                        <div class="p-lg-2">
+                            <button type="submit" style='width: 100%; padding-left:0; padding-right:0;'
+                                    class="btn btn-secondary">Применить
+                            </button>
+                        </div>
+
                         <div class="p-lg-2">
                             <button style='width: 100%; padding-left:0; padding-right:0;'
                                     class="btn btn-outline-secondary" id="flipbtn" form="1">Переворот
@@ -143,6 +158,12 @@
                                             р.</p>{% endif %}
                                         <p>{% if i.grouper.warranty %}
                                             <hr>Гарантия: <b>{{ i.grouper.warranty }}</b> мес.</p>{% endif %}
+                                        {% if i.grouper.id in expired %}
+                                            <p class="text-danger">Срочно реализовать S/N:</p>
+                                            {% for i in expired_sn %}
+                                                {{ i }}<br>
+                                            {% endfor %}
+                                        {% endif %}
                                     {% endif %}
                                 </div>
                                 <div class='flip-card-back'>
